[gd_scene load_steps=15 format=3 uid="uid://c1ngd1goslqvk"]

[ext_resource type="Script" uid="uid://bbvbkslfo06n7" path="res://addons/HLNC/Tools/Debugger/WorldDebug.cs" id="1_0kcdp"]
[ext_resource type="StyleBox" uid="uid://dij5gm3vs56w8" path="res://addons/HLNC/Tools/Debugger/world_debug_window.tres" id="1_g7bst"]
[ext_resource type="Script" uid="uid://xe2j1rptt30t" path="res://addons/HLNC/Tools/Debugger/WorldInspector.cs" id="2_0kcdp"]
[ext_resource type="Script" uid="uid://shxtf41r0cc6" path="res://addons/HLNC/Tools/Debugger/logs_view.gd" id="2_aqlnc"]
[ext_resource type="PackedScene" uid="uid://crdgpqgenb0xf" path="res://addons/HLNC/Tools/Inspector/inspector_title.tscn" id="3_c7nnj"]
[ext_resource type="Script" uid="uid://mc11470e1j5a" path="res://addons/HLNC/Tools/Debugger/log.gd" id="3_jgfhb"]
[ext_resource type="Script" uid="uid://33t11xduw86l" path="res://addons/HLNC/Tools/Debugger/nodes_view.gd" id="3_mwir2"]
[ext_resource type="Script" uid="uid://c2olh7tg3tg2h" path="res://addons/HLNC/Tools/Debugger/world_state_tabs.gd" id="3_s1nig"]
[ext_resource type="PackedScene" uid="uid://bq4fgpxhp5lg6" path="res://addons/HLNC/Tools/Inspector/inspector_field.tscn" id="4_aqlnc"]
[ext_resource type="Script" uid="uid://befpxppy83t7l" path="res://addons/HLNC/Tools/Debugger/window_all_frames.gd" id="4_jplgf"]
[ext_resource type="PackedScene" uid="uid://ct713ndc1316x" path="res://addons/HLNC/Tools/Debugger/bar_chart.tscn" id="4_sxv4c"]
[ext_resource type="Script" uid="uid://cbgeywswjlifb" path="res://addons/HLNC/Tools/Debugger/calls_view.gd" id="5_3hwhb"]
[ext_resource type="Script" uid="uid://c8fllydyv1c8d" path="res://addons/HLNC/Tools/Debugger/view_all_data_frames.gd" id="12_g7bst"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nebq5"]
bg_color = Color(0.129412, 0.14902, 0.180392, 1)

[node name="WorldDebug" type="Panel" node_paths=PackedStringArray("worldIdLabel")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_g7bst")
script = ExtResource("1_0kcdp")
worldIdLabel = NodePath("MarginContainer/VBoxContainer/HBoxContainer/WorldId")
metadata/_tab_index = 0

[node name="AllLogs" type="Window" parent="." node_paths=PackedStringArray("follow_check_box", "world_debug")]
title = "Logs"
position = Vector2i(0, 36)
size = Vector2i(640, 480)
visible = false
script = ExtResource("2_aqlnc")
follow_check_box = NodePath("Panel/CheckBox")
world_debug = NodePath("..")

[node name="Panel" type="Panel" parent="AllLogs"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LogBox" type="RichTextLabel" parent="AllLogs/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
selection_enabled = true

[node name="CheckBox" type="CheckBox" parent="AllLogs/Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -79.0
offset_bottom = 31.0
grow_horizontal = 0
size_flags_horizontal = 8
button_pressed = true
text = "Follow"

[node name="AllFrames" type="Window" parent="."]
auto_translate_mode = 1
title = "All Data Frames"
position = Vector2i(0, 36)
size = Vector2i(640, 490)
visible = false
script = ExtResource("4_jplgf")

[node name="Panel" type="MarginContainer" parent="AllFrames"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="AllFrames/Panel"]
layout_mode = 2

[node name="Data" parent="AllFrames/Panel/VBoxContainer" node_paths=PackedStringArray("debugPanel", "liveCheckbox") instance=ExtResource("4_sxv4c")]
layout_mode = 2
type = 2
Title = "Egress"
debugPanel = NodePath("../../../..")
liveCheckbox = NodePath("../../../../MarginContainer/VBoxContainer/HBoxContainer2/LiveCheckbox")

[node name="Calls" parent="AllFrames/Panel/VBoxContainer" node_paths=PackedStringArray("debugPanel", "liveCheckbox") instance=ExtResource("4_sxv4c")]
layout_mode = 2
Title = "Calls"
MaxValue = 0
debugPanel = NodePath("../../../..")
liveCheckbox = NodePath("../../../../MarginContainer/VBoxContainer/HBoxContainer2/LiveCheckbox")

[node name="Logs" parent="AllFrames/Panel/VBoxContainer" node_paths=PackedStringArray("debugPanel", "liveCheckbox") instance=ExtResource("4_sxv4c")]
layout_mode = 2
type = 1
Title = "Logs"
MaxValue = 0
debugPanel = NodePath("../../../..")
liveCheckbox = NodePath("../../../../MarginContainer/VBoxContainer/HBoxContainer2/LiveCheckbox")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "World:"

[node name="WorldId" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 2
vertical_alignment = 1
selection_enabled = true

[node name="Divider2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 8
theme_override_constants/margin_bottom = 8

[node name="Ruler" type="Panel" parent="MarginContainer/VBoxContainer/Divider2"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="Detail" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer/Detail"]
layout_mode = 2
size_flags_horizontal = 3
current_tab = 3
script = ExtResource("3_s1nig")

[node name="Peers" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Detail/TabContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
metadata/_tab_index = 0

[node name="ItemList" type="ItemList" parent="MarginContainer/VBoxContainer/Detail/TabContainer/Peers"]
layout_mode = 2
size_flags_vertical = 3

[node name="Nodes" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Detail/TabContainer" node_paths=PackedStringArray("world_debug", "world_inspector")]
visible = false
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("3_mwir2")
world_debug = NodePath("../../../../..")
world_inspector = NodePath("../../TabContainer2/Inspector")
metadata/_tab_index = 1

[node name="Tree" type="Tree" parent="MarginContainer/VBoxContainer/Detail/TabContainer/Nodes"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Calls" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Detail/TabContainer" node_paths=PackedStringArray("item_container", "worldDebug")]
visible = false
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("5_3hwhb")
item_container = NodePath("ItemList")
worldDebug = NodePath("../../../../..")
metadata/_tab_index = 2

[node name="ItemList" type="ItemList" parent="MarginContainer/VBoxContainer/Detail/TabContainer/Calls"]
layout_mode = 2
size_flags_vertical = 3

[node name="Logs" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Detail/TabContainer" node_paths=PackedStringArray("follow_check_box", "worldDebug")]
layout_mode = 2
script = ExtResource("3_jgfhb")
follow_check_box = NodePath("../../../../../AllLogs/Panel/CheckBox")
worldDebug = NodePath("../../../../..")
metadata/_tab_index = 3

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Detail/TabContainer/Logs"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
selection_enabled = true

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/Detail/TabContainer/Logs"]
layout_mode = 2
text = "View All Logs"

[node name="TabContainer2" type="TabContainer" parent="MarginContainer/VBoxContainer/Detail"]
layout_mode = 2
size_flags_horizontal = 3
current_tab = 0

[node name="Inspector" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Detail/TabContainer2" node_paths=PackedStringArray("debugPanel", "inspectorContainer", "tickDataContainer")]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_0kcdp")
debugPanel = NodePath("../../../../..")
inspectorContainer = NodePath("ScrollContainer/InspectorContainer")
tickDataContainer = NodePath("ScrollContainer/InspectorContainer/MarginContainer/TickDataContainer")
metadata/_tab_index = 0

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/Detail/TabContainer2/Inspector"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_nebq5")

[node name="InspectorContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Detail/TabContainer2/Inspector/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Detail/TabContainer2/Inspector/ScrollContainer/InspectorContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 18

[node name="TickDataContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Detail/TabContainer2/Inspector/ScrollContainer/InspectorContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel" parent="MarginContainer/VBoxContainer/Detail/TabContainer2/Inspector/ScrollContainer/InspectorContainer/MarginContainer/TickDataContainer" instance=ExtResource("3_c7nnj")]
layout_mode = 2

[node name="FieldTickId" parent="MarginContainer/VBoxContainer/Detail/TabContainer2/Inspector/ScrollContainer/InspectorContainer/MarginContainer/TickDataContainer" instance=ExtResource("4_aqlnc")]
layout_mode = 2

[node name="FieldTickTimestamp" parent="MarginContainer/VBoxContainer/Detail/TabContainer2/Inspector/ScrollContainer/InspectorContainer/MarginContainer/TickDataContainer" instance=ExtResource("4_aqlnc")]
layout_mode = 2

[node name="Label" parent="MarginContainer/VBoxContainer/Detail/TabContainer2/Inspector/ScrollContainer/InspectorContainer/MarginContainer/TickDataContainer/FieldTickTimestamp/HBoxContainer" index="0"]
text = "Timestamp"

[node name="Divider" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 8
theme_override_constants/margin_bottom = 8

[node name="Ruler" type="Panel" parent="MarginContainer/VBoxContainer/Divider"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="Data" parent="MarginContainer/VBoxContainer" node_paths=PackedStringArray("debugPanel", "liveCheckbox") instance=ExtResource("4_sxv4c")]
layout_mode = 2
type = 2
Title = "Data Frames"
debugPanel = NodePath("../../..")
liveCheckbox = NodePath("../HBoxContainer2/LiveCheckbox")

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LiveCheckbox" type="CheckBox" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
button_pressed = true
text = "Live"

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2" node_paths=PackedStringArray("data_frames_window")]
layout_mode = 2
text = "View All"
script = ExtResource("12_g7bst")
data_frames_window = NodePath("../../../../AllFrames")

[connection signal="Log" from="." to="AllLogs" method="_on_world_debug_log"]
[connection signal="Log" from="." to="MarginContainer/VBoxContainer/Detail/TabContainer/Logs" method="_on_world_debug_log"]
[connection signal="NetFunctionCalled" from="." to="MarginContainer/VBoxContainer/Detail/TabContainer/Calls" method="_on_world_debug_network_function_called"]
[connection signal="TickFrameReceived" from="." to="AllFrames/Panel/VBoxContainer/Data" method="_OnReceiveFrame"]
[connection signal="TickFrameReceived" from="." to="AllFrames/Panel/VBoxContainer/Calls" method="_OnReceiveFrame"]
[connection signal="TickFrameReceived" from="." to="AllFrames/Panel/VBoxContainer/Logs" method="_OnReceiveFrame"]
[connection signal="TickFrameReceived" from="." to="MarginContainer/VBoxContainer/Data" method="_OnReceiveFrame"]
[connection signal="TickFrameSelected" from="." to="." method="_OnTickFrameSelected"]
[connection signal="TickFrameSelected" from="." to="MarginContainer/VBoxContainer/Detail/TabContainer/Nodes" method="_on_world_debug_tick_frame_selected"]
[connection signal="TickFrameSelected" from="." to="MarginContainer/VBoxContainer/Detail/TabContainer/Calls" method="_on_world_debug_tick_frame_selected"]
[connection signal="TickFrameSelected" from="." to="MarginContainer/VBoxContainer/Detail/TabContainer/Logs" method="_on_world_debug_tick_frame_selected"]
[connection signal="TickFrameSelected" from="." to="MarginContainer/VBoxContainer/Detail/TabContainer2/Inspector" method="_OnTickFrameSelected"]
[connection signal="TickFrameUpdated" from="." to="AllFrames/Panel/VBoxContainer/Data" method="_OnFrameUpdated"]
[connection signal="TickFrameUpdated" from="." to="AllFrames/Panel/VBoxContainer/Calls" method="_OnFrameUpdated"]
[connection signal="TickFrameUpdated" from="." to="AllFrames/Panel/VBoxContainer/Logs" method="_OnFrameUpdated"]
[connection signal="TickFrameUpdated" from="." to="MarginContainer/VBoxContainer/Detail/TabContainer/Nodes" method="_on_world_debug_tick_frame_updated"]
[connection signal="TickFrameUpdated" from="." to="MarginContainer/VBoxContainer/Data" method="_OnFrameUpdated"]
[connection signal="close_requested" from="AllLogs" to="AllLogs" method="_on_close_requested"]
[connection signal="close_requested" from="AllFrames" to="AllFrames" method="_on_close_requested"]
[connection signal="network_node_inspected" from="MarginContainer/VBoxContainer/Detail/TabContainer/Nodes" to="MarginContainer/VBoxContainer/Detail/TabContainer2/Inspector" method="_OnNetNodeInspected"]
[connection signal="network_nodes_changed" from="MarginContainer/VBoxContainer/Detail/TabContainer/Nodes" to="MarginContainer/VBoxContainer/Detail/TabContainer" method="_on_nodes_network_nodes_changed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Detail/TabContainer/Nodes/Tree" to="MarginContainer/VBoxContainer/Detail/TabContainer/Nodes" method="_on_tree_item_selected"]
[connection signal="calls_changed" from="MarginContainer/VBoxContainer/Detail/TabContainer/Calls" to="MarginContainer/VBoxContainer/Detail/TabContainer" method="_on_calls_changed"]
[connection signal="log_changed" from="MarginContainer/VBoxContainer/Detail/TabContainer/Logs" to="MarginContainer/VBoxContainer/Detail/TabContainer" method="_on_logs_log_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Detail/TabContainer/Logs/Button" to="AllLogs" method="_on_open"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/Button" to="MarginContainer/VBoxContainer/HBoxContainer2/Button" method="_on_pressed"]

[editable path="MarginContainer/VBoxContainer/Detail/TabContainer2/Inspector/ScrollContainer/InspectorContainer/MarginContainer/TickDataContainer/FieldTickId"]
[editable path="MarginContainer/VBoxContainer/Detail/TabContainer2/Inspector/ScrollContainer/InspectorContainer/MarginContainer/TickDataContainer/FieldTickTimestamp"]
